# haskell-build-test

./: haskell-build-test.cabal
.github/workflows/: haskell-build-upstream.yml  haskell-build.yml
app/: Main.hs
