cabal-version:      3.0
name:               haskell-build-test
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell-build-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.0.0,
                      text-icu
    hs-source-dirs:   app
    default-language: Haskell2010
